# clinical-chatbot-agents

./: .env.example  .gitignore  ClaudeCode_Brief_CrewAI_Exploration.md  Infections Musculoskeletal COPY COPY.json  Pair_Prompt_V4.docx  README.md  pyproject.toml  requirements.txt
data/faiss_index/: index.faiss  index.pkl
data/guidelines/: README.md  musculoskeletal_infections.txt  nbm_guidance_2023.txt  respiratory_infections.txt  vancomycin_tdm_non_esrf.txt  warfarin_therapy_guide.txt
pair_crew/: __init__.py  crew.py  models.py
pair_crew/agents/: __init__.py  context_gate.py  retrieval.py  safety_review.py  specialist.py  triage.py
pair_crew/tools/: __init__.py  calculators.py  retrieval.py  safety.py  safety_checks.py
prompts/: v4_source_of_truth.md
scripts/: build_index.py  run_eval.py
tests/: eval_scenarios.yaml
tests/unit/: test_calculators.py  test_crew_branching.py  test_run_eval.py  test_safety_checks.py
