[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pair-crew"
version = "0.1.0"
description = "Agentic clinical guideline chatbot exploration with CrewAI."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.14.4",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.1,<2",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
include = ["pair_crew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
