[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pair-crew"
version = "0.1.0"
description = "Agentic clinical chatbot using CrewAI over SingHealth/MOH guidelines"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "faiss-cpu>=1.8.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
    "sentence-transformers>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pair_crew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
